<resources>
    <string name="app_name">TipCalculator</string>
    <string name="check_amt">Check amount:</string>
    <string name="party_size">Party size:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="fifteen">15%</string>
    <string name="twenty">20%</string>
    <string name="tf">25%</string>
    <string name="cp">COMPUTE TIP</string>

</resources>